# Shuriken-Analyzer

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  analysis_8h.html  analysis_8h.js  analysis_8h__dep__incl.map  analysis_8h__dep__incl.md5  analysis_8h__incl.map  analysis_8h__incl.md5  analysis_8h_source.html  annotated.html  annotated_dup.js  apk_8h.html  apk_8h.js  apk_8h__dep__incl.map  apk_8h__dep__incl.md5  apk_8h__incl.map  apk_8h__incl.md5  apk_8h_source.html  classes.html  classexceptions_1_1InvalidInstructionException-members.html  classexceptions_1_1InvalidInstructionException.html  classexceptions_1_1InvalidInstructionException.js  classexceptions_1_1InvalidInstructionException__inherit__graph.md5  classshuriken_1_1Scoped-members.html  classshuriken_1_1Scoped.html  classshuriken_1_1Scoped.js  classshuriken_1_1Scoped_a40c04b3c1ac04a77e79c11387d8ba385_cgraph.map  classshuriken_1_1Scoped_a40c04b3c1ac04a77e79c11387d8ba385_cgraph.md5  classshuriken_1_1Scoped_a40c04b3c1ac04a77e79c11387d8ba385_icgraph.map  classshuriken_1_1Scoped_a40c04b3c1ac04a77e79c11387d8ba385_icgraph.md5  classshuriken_1_1Scoped_aa5bc80e603c6e4464899b8a08fbaed16_cgraph.map  classshuriken_1_1Scoped_aa5bc80e603c6e4464899b8a08fbaed16_cgraph.md5  classshuriken_1_1Scoped_ad04886e83700aa072c1dfcc9c1cb6d43_cgraph.map  classshuriken_1_1Scoped_ad04886e83700aa072c1dfcc9c1cb6d43_cgraph.md5  classshuriken_1_1analysis_1_1dex_1_1Analysis-members.html  classshuriken_1_1analysis_1_1dex_1_1Analysis.html  (+1065 more)
binary-ninja/: .clang-format  CMakeLists.txt  README.md
binary-ninja/arch-smali/: CMakeLists.txt
binary-ninja/arch-smali/inc/: plugin.h
binary-ninja/arch-smali/src/: arch-smali.cpp  plugin.cpp
binary-ninja/binja-api/: CMakeLists.txt
binary-ninja/view-dex/: CMakeLists.txt
binary-ninja/view-dex/inc/: plugin.h
binary-ninja/view-dex/src/: dexview.cpp  dexviewtype.cpp  plugin.cpp
cmake/: cmake_install_uninstall.cmake  (+1 more)
shuriken/: CMakeLists.txt  README.md  cmake_uninstall.cmake.in
shuriken-dump/: CMakeLists.txt  shuriken-dump.cpp
shuriken/bindings/Python/: setup.py  test.py
shuriken/bindings/Python/shuriken/: __init__.py  dex.py
shuriken/bindings/Python/tests/: test_apk.py  test_dex.py
shuriken/include/shuriken/analysis/Dex/: analysis.h  dex_analysis.h  external_class.h  external_field.h  external_method.h
shuriken/include/shuriken/api/: shuriken_parsers_core.h
shuriken/include/shuriken/api/C/: shuriken_core.h  shuriken_core_data.h
shuriken/include/shuriken/api/CPP/shuriken/: shuriken_cpp_core.h  shuriken_cpp_disassembly.h  shuriken_enums.h  shuriken_structs.h
shuriken/include/shuriken/api/Python/: CMakeLists.txt  __init__.py  dex.py
shuriken/include/shuriken/common/: deref_iterator_range.h  iterator_range.h  logger.h  shurikenstream.h
shuriken/include/shuriken/common/Dex/: dvm_types.h
shuriken/include/shuriken/disassembler/Dex/: dex_disassembler.h  dex_instructions.h  dex_opcodes.h  disassembled_method.h  disassembler.h  internal_disassembler.h  linear_sweep_disassembler.h
shuriken/include/shuriken/disassembler/Dex/definitions/: dvm_inst_kind.def  dvm_inst_names.def  dvm_inst_operation.def  dvm_types.def
shuriken/include/shuriken/exceptions/: invalidinstruction_exception.h
shuriken/include/shuriken/parser/: shuriken_parsers.h
shuriken/include/shuriken/parser/Apk/: apk.h
shuriken/include/shuriken/parser/Dex/: annotations.h  classes.h  dex_annotations.h  dex_classes.h  dex_encoded.h  dex_fields.h  dex_header.h  dex_mapitem.h  dex_methods.h  dex_protos.h  dex_strings.h  dex_types.h  dvm_types.h  encoded.h  fields.h  header.h  mapitem.h  methods.h  parser.h  protos.h  strings.h  types.h
shuriken/lib/analysis/Dex/: CMakeLists.txt  analysis.cpp  basic_blocks.cpp  class_analysis.cpp  external_class.cpp  external_field.cpp  external_method.cpp  field_analysis.cpp  method_analysis.cpp  string_analysis.cpp
shuriken/lib/api/: CMakeLists.txt  dex_core_api.cpp
shuriken/lib/api/Dex/: CMakeLists.txt  ShurikenClassField.cpp  ShurikenClassManager.cpp  ShurikenClassMethod.cpp  ShurikenDex.cpp  ShurikenDexClass.cpp  ShurikenDisassembler.cpp  ShurikenDisassemblerConversions.cpp  ShurikenPrototype.cpp  apk_c_core_api.cpp  dex_c_core_api.cpp  dex_core_api.cpp  dex_cpp_core_api.cpp  dex_cpp_core_api_internal.h
shuriken/lib/common/: CMakeLists.txt  logger.cpp  logger.hpp  shurikenstream.cpp
shuriken/lib/disassembler/Dex/: CMakeLists.txt  dex_disassembler.cpp  dex_instructions.cpp  disassembled_method.cpp  disassembler.cpp  internal_disassembler.cpp  linear_sweep_disassembler.cpp
shuriken/lib/parser/Apk/: CMakeLists.txt  apk.cpp  apk_extractor.h
shuriken/lib/parser/Dex/: CMakeLists.txt  annotations.cpp  classes.cpp  dex_annotations.cpp  dex_classes.cpp  dex_encoded.cpp  dex_fields.cpp  dex_header.cpp  dex_mapitem.cpp  dex_methods.cpp  dex_protos.cpp  dex_strings.cpp  dex_types.cpp  dvm_types.cpp  encoded.cpp  fields.cpp  header.cpp  mapitem.cpp  methods.cpp  parser.cpp  protos.cpp  strings.cpp  types.cpp
shuriken/tests/: CMakeLists.txt
shuriken/tests/apk/: CMakeLists.txt  analyze-simple-zip.cpp  apk-core-api-test.cpp  get-analysis-objects-from-simple-zip.cpp
shuriken/tests/code/: CMakeLists.txt
shuriken/tests/code/java/: CMakeLists.txt  DexParserTest.java  README.md  _switch.java  _xrefs.java
shuriken/tests/compiled/: DexParserTest.dex  _cast.dex  _double.dex  _exception.dex  _float.dex  _instance.dex  _int.dex  _long.dex  _loop.dex  _null.dex  _pi.dex  _switch.dex  test_zip.apk
shuriken/tests/dex/analysis/: CMakeLists.txt  core-api-test-analysis.cpp  dex-files-folder.in  xrefs-analysis.cpp
shuriken/tests/dex/disassembler/: CMakeLists.txt  core-api-test-disassembler.cpp  test-code-with-exceptions.cpp  test-code-with-loops.cpp  test-code-with-switch.cpp
shuriken/tests/dex/parser/: CMakeLists.txt  core-api-test.cpp  headers-test-dex.cpp  parse-test-dex.cpp
shuriken/tests/disassembler/: CMakeLists.txt
shuriken/tests/parser/: CMakeLists.txt  core-api-test.cpp  dex-files-folder.in  dex-files-folder.inc  headers-test-dex.cpp  parse-test-dex.cpp
(+145 files in other folders)
